# Erelang

./: .gitignore  CMakeLists.txt  README.md  backup.guide.html  erevos.fullguide.md  guide.html  policy.cfg  release.md  syntax.json
.github/instructions/: vscode-build.instructions.md
dev/: missing.md
docs/: erevos.md  guide.md  tutorial.md
docs/langkit/: README.md
erelang/: README.md  compiler.elan  probe_local_lexer.elan
erelang/examples/: hello.elan  impl_demo.elan  impl_demo_runner.elan
erelang/modules/: ast.elan  codegen.elan  core.elan  ir.elan  lexer.elan  parser.elan
erelang/src/: ast.elan  codegen.elan  ir.elan  lexer.elan  optimizer.elan  parser.elan  runtime.elan  symboltable.elan  typechecker.elan
erevos-language/: .last_packaged  .vscodeignore  README.md  erelang-language-0.0.11.vsix  erelang-language-0.0.12.vsix  erelang-language-0.0.3.vsix  erelang-language-0.0.4.vsix  erelang-language-0.0.5.vsix  erelang-language-0.0.6.vsix  erelang-language-0.0.7.vsix  erelang-language-0.0.8.vsix  erelang-language-0.0.9.vsix  erelang_language.vsix  language-configuration-core.json  language-configuration-manifest.json  language-configuration.json  package-lock.json  package.json  tsconfig.json
erevos-language/.github/: copilot-instructions.md
erevos-language/snippets/: erevos.code-snippets
erevos-language/src/: extension.ts
erevos-language/syntaxes/: erevos-core.tmLanguage.json  erevos-manifest.tmLanguage.json  erevos.tmLanguage.json
examples/: collections_sugar.elan  compiler.elan  langkit_bootstrap.elan  native_backend_demo.elan  native_controlflow_demo.elan  program.elan  program.ere  rand_demo.elan  selfhost_bootstrap_demo.elan  test.elan
examples/debug/: debug.elan
examples/lib/: debugger.elan  entity.elan  gui_class.elan  module.elan
examples/modules/: dynamic.elan  math.elan
examples/std/: gui.elan  rand.elan  ui.elan
include/erelang/: ast.hpp  cabi.h  codegen_x64.hpp  creation_kit.hpp  error.hpp  ffi.hpp  gc.hpp  imgui_dwm_shim.h  ir.hpp  language_profile.hpp  lexer.hpp  modules.hpp  optimizer.hpp  parser.hpp  plugins.hpp  policy.hpp  runtime.hpp  runtime_internals.hpp  stdlib.hpp  symboltable.hpp  typechecker.hpp  version.hpp
include/erelang/erodsl/: spec.hpp
include/erelang/features/: serialization.hpp
include/obskript/: compat.hpp  lexer.hpp  modules.hpp  optimizer.hpp  symboltable.hpp
include/obskript_deprecated/: cabi.h  parser.hpp  runtime.hpp  typechecker.hpp
src/: ast.cpp  build_launcher.cpp  cabi_exports.cpp  codegen_x64.cpp  creation_kit.cpp  error.cpp  ffi.cpp  gc.cpp  ir.cpp  language_profile.cpp  lexer.cpp  main.cpp  modules.cpp  obs_main.cpp  optimizer.cpp  parser.cpp  plugins.cpp  policy.cpp  runtime.cpp  stdlib.cpp  symboltable.cpp  typechecker.cpp
src/builtins/: binary.cpp  crypto.cpp  data.cpp  math.cpp  monitor.cpp  network.cpp  perm.cpp  regex.cpp  system.cpp  threads.cpp
src/erodsl/: spec.cpp
src/features/: README.md  serialization.cpp
src/info/: planned.obmanifest
tmp/: abi_6arg_probe.elan  abi_6arg_probe.s  builtin_batch_probe.elan  call_ret_probe.elan  call_ret_probe.s  collections_methods_probe.elan  collections_methods_probe2.elan  collections_removed_probe.elan  deterministic_dict_probe.elan  dict_foreach_probe.elan  do_ternary_probe.elan  double_literal_check.elan  dynamic_cast_smoke.elan  for_try_probe.eir  for_try_probe.elan  for_try_probe.s  forin_static_probe.eir  forin_static_probe.elan  forin_static_probe.s  forin_static_probe_obc.eir  generated_from_compiler.elan  global_min.elan  global_plain.elan  illegal_char_int.elan  impl_block_call_test.elan  impl_multiline_probe.elan  input_test.elan  invalid_array_pair_loop.elan  invalid_dict_in_loop.elan  isolate_0.elan  isolate_1.elan  isolate_2.elan  isolate_3.elan  json_smoke.elan  legacy_mutator_probe.elan  lexer_logic_probe.elan  lit_hash.elan  lit_min1.elan  lit_min2.elan  lit_min3.elan  (+71 more)
tools/: build-and-update-extension.ps1  bump-version.ps1  bundle-mingw-runtime.ps1
tools/cmake/: bundle-mingw-runtime.cmake  update-extension.cmake
